test/Vehicle/Test/CompileMode/Error/ParameterErrors/invalidIndex.vcl
@parameter
n : Index 5